--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -297,6 +297,15 @@
       flex: 0;
     }
 
+    @media (max-width: 767.98px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+
+    @media (max-width: 420px) {
+      grid-template-columns: 1fr;
+    }
+
     &-group:not(:last-child) {
       margin-right: 60px;
 
@@ -310,6 +319,13 @@
 
       @media (max-width: 991.98px) {
         margin-right: 30px;
+      }
+    }
+
+    &-group {
+      @media (max-width: 767.98px) {
+        margin-right: 0!important;
+        margin-bottom: 10px!important;
       }
     }
   }
